# rep1

./: 1.py  buildozer.spec  main.py  project.toml  pyproject.toml  words.txt
.github/workflows/: android.yml  build.yml
src/hello_world/: app.py
src/myapp/: AndroidManifest.xml  __init__.py  __main__.py  app.py  myapp.py
