[build-system]
requires = ["briefcase>=0.3.0"]
build-backend = "briefcase.build"

[tool.briefcase]
project_name = "MyApp"
bundle = "com.example.myapp"  # Важно: в формате com.domain.appname
version = "0.1.0"
url = "https://example.com"
license = "MIT"
author = "Your Name"
author_email = "your@email.com"

# Обязательные настройки для Android
[tool.briefcase.app.myapp]
formal_name = "MyApp"
description = "My Toga Application"
sources = ["src/myapp"]
icon = "resources/icon"  # Обязательно создайте эту иконку

[tool.briefcase.app.myapp.android]
# Критичные настройки версий SDK
target_sdk_version = 31
min_sdk_version = 21

# Все необходимые зависимости
requires = [
    "toga-android>=0.4.0",
    "rubicon-java>=0.2.3",  # Для работы с Android API
    "setuptools>=65.5.1",   # Важно для сборки
]

# Настройки подписи (даже для debug)
signing_key = "debug.keystore"
signing_key_alias = "androiddebugkey"
signing_key_password = "android"

# Дополнительные разрешения
permission = [
    "android.permission.INTERNET",
]